java11_class_level2/Chapter2_p50/src/test/Bar.java
/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package test;

import demo.Foo;

/**
 *
 * @author javat
 */
public class Bar extends Foo{
    private int sum=10;
    public void reportSum(){
        sum+=result;
        //sum+=num; //error
    }
}
